[gd_scene load_steps=13 format=3 uid="uid://c7ugpdrdupcg8"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_3d8m2"]
[ext_resource type="Script" path="res://Scripts/buttons.gd" id="2_3linl"]
[ext_resource type="PackedScene" uid="uid://pi60jckckj3v" path="res://Scenes/options_menu.tscn" id="2_q6hi4"]
[ext_resource type="Texture2D" uid="uid://hl8uidqijyoj" path="res://Sprites/Backrounds/Main-menu.png" id="2_skdbk"]
[ext_resource type="Texture2D" uid="uid://c83k2yvtmeycx" path="res://Sprites/Buttons/Continue.png" id="4_4r3q3"]
[ext_resource type="Texture2D" uid="uid://biko4e8itxcx2" path="res://Sprites/Buttons/Continue-clicked.png" id="5_f47oa"]
[ext_resource type="Texture2D" uid="uid://cwxaa22vv4vju" path="res://Sprites/Buttons/New-game.png" id="6_a0q0m"]
[ext_resource type="Texture2D" uid="uid://djr8nxqxpdldx" path="res://Sprites/Buttons/New-Game-clicked.png" id="7_bfedl"]
[ext_resource type="Texture2D" uid="uid://bk1xc6m6p6188" path="res://Sprites/Buttons/Options.png" id="8_gdgpt"]
[ext_resource type="Texture2D" uid="uid://cy41rh611xi5r" path="res://Sprites/Buttons/Options-clicked.png" id="9_qeikl"]
[ext_resource type="Texture2D" uid="uid://bfiarmvbs3xc2" path="res://Sprites/Buttons/Exit.png" id="10_16p40"]
[ext_resource type="Texture2D" uid="uid://v7dab7epktm0" path="res://Sprites/Buttons/Exit-clicked.png" id="11_y2gj2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3d8m2")

[node name="Sprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_skdbk")
expand_mode = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.7
anchor_top = 0.037
anchor_right = 1.0
anchor_bottom = 0.437
grow_horizontal = 0
mouse_filter = 2
script = ExtResource("2_3linl")
metadata/_edit_use_anchors_ = true

[node name="NewGame" type="TextureButton" parent="Buttons"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.123
anchor_top = 0.254444
anchor_right = 0.938
anchor_bottom = 0.486
offset_left = 0.152016
offset_top = 0.0799866
offset_right = -0.287903
offset_bottom = 0.0479736
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("6_a0q0m")
texture_pressed = ExtResource("7_bfedl")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Continue" type="TextureButton" parent="Buttons"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0260415
anchor_top = 0.019
anchor_right = 0.988
anchor_bottom = 0.261667
offset_top = -0.168
offset_right = -0.0880127
texture_normal = ExtResource("4_4r3q3")
texture_pressed = ExtResource("5_f47oa")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Options" type="TextureButton" parent="Buttons"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.143879
anchor_top = 0.504673
anchor_right = 0.932208
anchor_bottom = 0.759037
offset_left = 0.125427
offset_top = 0.0213776
offset_right = 0.0480957
offset_bottom = 0.135956
texture_normal = ExtResource("8_gdgpt")
texture_pressed = ExtResource("9_qeikl")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="OptionsMenu" parent="Buttons/Options" instance=ExtResource("2_q6hi4")]
visible = false
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_right = -0.00012207

[node name="Exit" type="TextureButton" parent="Buttons"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.262436
anchor_top = 0.785
anchor_right = 0.884
anchor_bottom = 0.963
offset_left = -0.162933
offset_top = -0.120026
offset_right = -0.183929
offset_bottom = -0.0160522
texture_normal = ExtResource("10_16p40")
texture_pressed = ExtResource("11_y2gj2")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Buttons/NewGame" to="Buttons" method="_on_new_game_pressed"]
[connection signal="pressed" from="Buttons/Continue" to="Buttons" method="_on_continue_pressed"]
[connection signal="pressed" from="Buttons/Options" to="Buttons" method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="Buttons" method="_on_exit_pressed"]
